video: tegra: host: nvdec risc-v 2-stage support
Added 2-stage risc-v boot support for NVDEC.

Programming sequence:
- Select risc-v core
- Read desc.bin for offset information
- Load BL ucode by programming BCR registers
  with start address of manifest, code and data
- Configure DMA
- Kick start RISCV and let BR take over
- Check the return code for success
- Reset NVDEC after stage-1 is success
- Repeat the same for LS ucode in stage-2
- Return success after stage-2 passes

Note: 'enable_riscv_boot' is set to 'false' now,
      until all dependencies are clear.

Bug 200728554
Jira HOSTX-2870

Change-Id: I10dfb4ff6f6584c831a4d9185f5015e78b3d17cd
Signed-off-by: Santosh B S <santoshb@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-t23x/+/2543314
Reviewed-by: Arto Merilainen <amerilainen@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Mikko Perttunen <mperttunen@nvidia.com>
Reviewed-by: Praveen Kumar Reddy M.V. <pkreddy@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/video/tegra/host/Makefile
+++ b/drivers/video/tegra/host/Makefile
@@ -14,4 +14,5 @@ obj-y += nvdla/
 ifeq ($(CONFIG_TEGRA_T23X_GRHOST),y)
 nvhost-$(CONFIG_TEGRA_GRHOST_VHOST) += vhost/vhost_t23x.o
 nvhost-$(CONFIG_TEGRA_GRHOST_TSEC) += tsec/tsec_t23x.o
+nvhost-$(CONFIG_TEGRA_GRHOST_NVDEC) += nvdec/nvdec_t23x.o
 endif
