--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -456,6 +456,20 @@
 		status = "disabled";
 	};
 
+	fan_control_tachometer: tachometer@39b0000 {
+		compatible = "nvidia,pwm-tegra194-tachometer";
+		reg = <0x0 0x039b0000 0x0 0x10>;
+		#pwm-cells = <2>;
+		clocks = <&bpmp_clks TEGRA234_CLK_TACH1>;
+		clock-names = "tach";
+		resets = <&bpmp_resets TEGRA234_RESET_TACH1>;
+		reset-names = "tach";
+		pulse-per-rev = <2>;
+		capture-window-length = <2>;
+		disable-clk-gate;
+		status = "disabled";
+	};
+
 	tegra_tachometer: tachometer@39c0000 {
 		compatible = "nvidia,pwm-tegra194-tachometer";
 		reg = <0x0 0x039c0000 0x0 0x10>;
