arm64: dts: add include path for automotive common
Bug 200740871

Change-Id: I1c738afb40289415173ead04dd47e73496b3be06
Reviewed-on: https://git-master.nvidia.com/r/c/linux-5.10/+/2544165
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Amlan Kundu <akundu@nvidia.com>
Reviewed-by: Mark Mendez <mmendez@nvidia.com>
Reviewed-by: Sumeet Gupta <sumeetg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Hyong Bin Kim <hyongbink@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -30,6 +30,7 @@ ifeq ($(CONFIG_ARCH_TEGRA_23x_SOC),y)
 DTC_INCLUDE += $(tegra-dtstree)/soc/t23x/kernel-include
 DTC_INCLUDE += $(tegra-dtstree)/soc/t23x/kernel-dts
 DTC_INCLUDE += $(tegra-dtstree)/platform/t23x/common/kernel-dts
+DTC_INCLUDE += $(tegra-dtstree)/platform/t23x/automotive/kernel-dts/common/linux/
 endif
 
 ifeq ($(CONFIG_ARCH_TEGRA_239_SOC),y)
