kernel/nvidia: enable dependency on CONFIG_ARCH_TEGRA_186_SOC
CONFIG_ARCH_TEGRA_18x_SOC is not set on K5.10 but
set on K4.14. This change enables the drivers that
were enabled in K4.14 by enabling CONFIG_ARCH_TEGRA_186_SOC

Bug 200604205
Bug 200727985

Change-Id: I0973001490c57d83dddcd91360e2b47ca7a7c543
Signed-off-by: Prathamesh Shete <pshete@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2540532
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Sumit Gupta <sumitg@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/platform/tegra/Makefile
+++ b/drivers/platform/tegra/Makefile
@@ -25,7 +25,9 @@ obj-$(CONFIG_TEGRA_AON) += tegra-aon-ivc-echo.o
 obj-$(CONFIG_ARCH_TEGRA_18x_SOC) += tegra18_cpu_debugfs.o
 obj-$(CONFIG_TEGRA_PM_DEBUG) += pm.o
 obj-$(CONFIG_TEGRA_PM_DEBUG) += pm_debugfs.o
-obj-$(CONFIG_ARCH_TEGRA_18x_SOC) += reboot-t18x.o
+ifneq ($(filter y,$(CONFIG_ARCH_TEGRA_18x_SOC) $(CONFIG_ARCH_TEGRA_186_SOC)),)
+obj-y += reboot-t18x.o
+endif
 ifneq ($(filter y,$(CONFIG_ARCH_TEGRA_18x_SOC) $(CONFIG_ARCH_TEGRA_186_SOC)),)
 obj-y += pm-tegra186.o
 endif
