--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -18,7 +18,7 @@
 #include <dt-bindings/version.h>
 #include <dt-bindings/clock/tegra234-clock.h>
 #include <dt-bindings/reset/tegra234-reset.h>
-#include "dt-bindings/interrupt/tegra194-irq.h"
+#include <dt-bindings/interrupt/tegra234-irq.h>
 #include "dt-bindings/interrupt-controller/arm-gic.h"
 #include "dt-bindings/soc/tegra234-powergate.h"
 #include <dt-bindings/interrupt-controller/irq.h>
@@ -135,10 +135,10 @@
 	aon_hsp: tegra-hsp@c150000 {
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x0c150000 0x0 0x00090000>;
-		interrupts =	<0 TEGRA194_IRQ_AON_HSP_SHARED_1 0x4>,
-				<0 TEGRA194_IRQ_AON_HSP_SHARED_2 0x4>,
-				<0 TEGRA194_IRQ_AON_HSP_SHARED_3 0x4>,
-				<0 TEGRA194_IRQ_AON_HSP_SHARED_4 0x4>;
+		interrupts =	<0 TEGRA234_IRQ_AON_HSP_SHARED_1 0x4>,
+				<0 TEGRA234_IRQ_AON_HSP_SHARED_2 0x4>,
+				<0 TEGRA234_IRQ_AON_HSP_SHARED_3 0x4>,
+				<0 TEGRA234_IRQ_AON_HSP_SHARED_4 0x4>;
 		interrupt-names = "shared1", "shared2", "shared3", "shared4";
 		status = "disabled";
 	};
@@ -147,14 +147,14 @@
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x03c00000 0x0 0x000a0000>;
 		interrupts =	<0 176 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_0 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_1 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_2 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_3 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_4 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_5 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_6 0x4>,
-				<0 TEGRA194_IRQ_TOP0_HSP_SHARED_7 0x4>;
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_0 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_1 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_2 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_3 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_4 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_5 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_6 0x4>,
+				<0 TEGRA234_IRQ_TOP0_HSP_SHARED_7 0x4>;
 		interrupt-names = "doorbell",
 				"shared0", "shared1", "shared2", "shared3",
 				"shared4", "shared5", "shared6", "shared7";
@@ -166,11 +166,11 @@
 	hsp_top1: tegra-hsp@3d00000 {
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x03d00000 0x0 0x000a0000>;
-		interrupts = <0 TEGRA194_IRQ_TOP1_HSP_SHARED_0 0x4>,
-				<0 TEGRA194_IRQ_TOP1_HSP_SHARED_1 0x4>,
-				<0 TEGRA194_IRQ_TOP1_HSP_SHARED_2 0x4>,
-				<0 TEGRA194_IRQ_TOP1_HSP_SHARED_3 0x4>,
-				<0 TEGRA194_IRQ_TOP1_HSP_SHARED_4 0x4>;
+		interrupts = <0 TEGRA234_IRQ_TOP1_HSP_SHARED_0 0x4>,
+				<0 TEGRA234_IRQ_TOP1_HSP_SHARED_1 0x4>,
+				<0 TEGRA234_IRQ_TOP1_HSP_SHARED_2 0x4>,
+				<0 TEGRA234_IRQ_TOP1_HSP_SHARED_3 0x4>,
+				<0 TEGRA234_IRQ_TOP1_HSP_SHARED_4 0x4>;
 		interrupt-names = "shared0", "shared1", "shared2", "shared3", "shared4";
 		#mbox-cells = <2>;
 		status = "disabled";
@@ -194,10 +194,10 @@
 	sce_hsp: tegra-hsp@b150000 {
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x0b150000 0x0 0x00090000>;
-		interrupts =	<0 TEGRA194_IRQ_SCE_HSP_SHARED_1 0x4>,
-				<0 TEGRA194_IRQ_SCE_HSP_SHARED_2 0x4>,
-				<0 TEGRA194_IRQ_SCE_HSP_SHARED_3 0x4>,
-				<0 TEGRA194_IRQ_SCE_HSP_SHARED_4 0x4>;
+		interrupts =	<0 TEGRA234_IRQ_SCE_HSP_SHARED_1 0x4>,
+				<0 TEGRA234_IRQ_SCE_HSP_SHARED_2 0x4>,
+				<0 TEGRA234_IRQ_SCE_HSP_SHARED_3 0x4>,
+				<0 TEGRA234_IRQ_SCE_HSP_SHARED_4 0x4>;
 		interrupt-names = "shared1", "shared2", "shared3", "shared4";
 		nvidia,mbox-ie;
 		status = "disabled";
@@ -206,10 +206,10 @@
 	hsp_rce: tegra-hsp@b950000 {
 		compatible = "nvidia,tegra186-hsp";
 		reg = <0x0 0x0b950000 0x0 0x00090000>;
-		interrupts =	<0 TEGRA194_IRQ_RCE_HSP_SHARED_1 0x4>,
-				<0 TEGRA194_IRQ_RCE_HSP_SHARED_2 0x4>,
-				<0 TEGRA194_IRQ_RCE_HSP_SHARED_3 0x4>,
-				<0 TEGRA194_IRQ_RCE_HSP_SHARED_4 0x4>;
+		interrupts =	<0 TEGRA234_IRQ_RCE_HSP_SHARED_1 0x4>,
+				<0 TEGRA234_IRQ_RCE_HSP_SHARED_2 0x4>,
+				<0 TEGRA234_IRQ_RCE_HSP_SHARED_3 0x4>,
+				<0 TEGRA234_IRQ_RCE_HSP_SHARED_4 0x4>;
 		nvidia,mbox-ie;
 		#mbox-cells = <2>;
 		interrupt-names = "shared1", "shared2", "shared3", "shared4";
@@ -351,54 +351,54 @@
 			<0x0 0x2200000 0x0 0x10000>,
 			<0x0 0x2210000 0x0 0x10000>;
 		interrupts =
-			<0 TEGRA194_IRQ_GPIO0_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_3 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_4 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_5 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_6 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO0_7 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_3 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_4 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_5 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_6 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO1_7 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_3 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_4 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_5 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_6 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO2_7 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_3 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_4 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_5 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_6 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO3_7 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_3 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_4 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_5 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_6 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO4_7 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_3 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_4 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_5 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_6 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_GPIO5_7 IRQ_TYPE_LEVEL_HIGH>;
+			<0 TEGRA234_IRQ_GPIO0_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_3 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_4 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_5 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_6 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO0_7 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_3 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_4 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_5 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_6 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO1_7 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_3 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_4 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_5 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_6 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO2_7 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_3 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_4 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_5 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_6 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO3_7 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_3 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_4 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_5 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_6 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO4_7 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_3 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_4 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_5 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_6 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_GPIO5_7 IRQ_TYPE_LEVEL_HIGH>;
 		gpio-controller;
 		#gpio-cells = <2>;
 		interrupt-controller;
@@ -412,10 +412,10 @@
 		reg = 	<0x0 0xc2f0000 0x0 0x1000>,
 			<0x0 0xc2f1000 0x0 0x1000>;
 		interrupts =
-			<0 TEGRA194_IRQ_AON_GPIO_0 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_AON_GPIO_1 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_AON_GPIO_2 IRQ_TYPE_LEVEL_HIGH>,
-			<0 TEGRA194_IRQ_AON_GPIO_3 IRQ_TYPE_LEVEL_HIGH>;
+			<0 TEGRA234_IRQ_AON_GPIO_0 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_AON_GPIO_1 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_AON_GPIO_2 IRQ_TYPE_LEVEL_HIGH>,
+			<0 TEGRA234_IRQ_AON_GPIO_3 IRQ_TYPE_LEVEL_HIGH>;
 		gpio-controller;
 		#gpio-cells = <2>;
 		interrupt-controller;
