--- a/drivers/video/tegra/host/pva/Makefile
+++ b/drivers/video/tegra/host/pva/Makefile
@@ -9,6 +9,7 @@ obj-$(BRINGUP) = bringup/
 GCOV_PROFILE := y
 ccflags-$(V2) += -I$(srctree.nvidia)/drivers/video/tegra/host/pva
 ccflags-$(V2) += -I$(srctree.nvidia)/drivers/video/tegra/host
+ccflags-$(V2) += -I$(srctree.nvidia)/drivers/video/tegra/host/pva/fw_include
 ccflags-$(V2) += -I$(srctree.nvidia)/include
 ccflags-$(V2) += -Werror
 
