dts: t19x: Add OP-TEE node
This change adds the OP-TEE node to DTB to enable the OP-TEE driver.
Reference:
Documentation/devicetree/bindings/arm/firmware/linaro,optee-tz.txt

This patch is made by Sherwin Dsouza.

Jira L4T-1432

Change-Id: Id6cacb84adf6e51385720496fdb2207845179047
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2547637
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Nitin Kumbhar <nkumbhar@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Mark Zhang <markz@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra194-soc/tegra194-soc-base.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-base.dtsi
@@ -86,6 +86,14 @@
 		status = "disabled";
 	};
 
+	firmware {
+		optee {
+			compatible = "linaro,optee-tz";
+			method = "smc";
+			status = "disabled";
+		};
+	};
+
 	timer {
 		compatible = "arm,armv8-timer";
 		interrupts = <GIC_PPI 13
