--- a/drivers/gpu/nvgpu/Makefile.sources
+++ b/drivers/gpu/nvgpu/Makefile.sources
@@ -786,7 +786,8 @@ srcs += hal/init/hal_ga10b.c \
 	hal/power_features/cg/ga10b_gating_reglist.c \
 	hal/therm/therm_ga10b_fusa.c \
 	hal/ce/ce_ga10b_fusa.c \
-	hal/grmgr/grmgr_ga10b.c
+	hal/grmgr/grmgr_ga10b.c \
+	hal/sim/sim_ga10b.c \
 
 ifeq ($(CONFIG_NVGPU_COMPRESSION),1)
 srcs += \
