t23x: eqos: pad calibration
Add eqos RGMII Rx pad pins
(PADCTL_EQOS_RDx of E_INPUT) enable/disable

Bug 2831220

Change-Id: Id8a5275b7555d22ca4df18af9207ac102af54836
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2548515
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Srinivas Ramachandran <srinivasra@nvidia.com>
Reviewed-by: Mahesh Patil <maheshp@nvidia.com>
Reviewed-by: Ashutosh Jha <ajha@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: Mahesh Patil <maheshp@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
@@ -15,10 +15,29 @@
  */
 
 /*
- * tegra194-soc-eqos.dtsi: Ethernet QOS DTSI file.
+ * tegra234-soc-eqos.dtsi: Ethernet QOS DTSI file.
  */
 
 / {
+	pinmux@2430000 {
+		eqos_mii_rx_input_state_disable: eqos_rx_disable {
+			eqos {
+				nvidia,pins = "eqos_rd0_pe6","eqos_rd1_pe7",
+						"eqos_rd2_pf0","eqos_rd3_pf1",
+						"eqos_rx_ctl_pf2";
+				nvidia,enable-input = <TEGRA_PIN_DISABLE>;
+			};
+		};
+		eqos_mii_rx_input_state_enable: eqos_rx_enable {
+			eqos {
+				nvidia,pins = "eqos_rd0_pe6","eqos_rd1_pe7",
+						"eqos_rd2_pf0","eqos_rd3_pf1",
+						"eqos_rx_ctl_pf2";
+				nvidia,enable-input = <TEGRA_PIN_ENABLE>;
+			};
+		};
+	};
+
 	eqos_vm_irq_config: vm-irq-config {
 		nvidia,num-vm-irqs = <4>;
 		vm_irq1 {
@@ -92,6 +111,7 @@
 		nvidia,vm-irq-config = <&eqos_vm_irq_config>;
 		status = "disabled";
 		nvidia,dcs-enable = <0x1>;
+		nvidia,pad_calibration = <0x1>;
 		nvidia,rx_riwt = <512>;
 		nvidia,rx_frames = <64>;
 		nvidia,tx_usecs = <256>;
@@ -101,5 +121,8 @@
 		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
 		nvidia,ptp_ref_clock_speed = <208300000>;
 		nvidia,instance_id = <4>; /* EQOS instance */
+		pinctrl-names = "mii_rx_disable", "mii_rx_enable";
+		pinctrl-0 = <&eqos_mii_rx_input_state_disable>;
+		pinctrl-1 = <&eqos_mii_rx_input_state_enable>;
 	};
 };
