--- a/kernel-dts/tegra234-soc/tegra234-soc-cvm.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-cvm.dtsi
@@ -22,6 +22,10 @@
 #include <tegra234-soc/tegra234-soc-prod.dtsi>
 
 / {
+	gpcdma@2600000 {
+		status = "okay";
+	};
+
 	i2c@3160000 {
 		status = "okay";
 	};
