--- a/t234-common-cvm/tegra234-platforms-vrs.dtsi
+++ b/t234-common-cvm/tegra234-platforms-vrs.dtsi
@@ -20,22 +20,25 @@
 		rtc1 = &tegra_rtc;
 	};
 
-	bpmp_i2c {
-		vrs@3c {
-			compatible = "nvidia,vrs-pseq";
-			reg = <0x3c>;
-			interrupt-parent = <&intc>;
-			interrupts = <GIC_SPI TEGRA194_IRQ_PMIC_EXT_INTR IRQ_TYPE_LEVEL_HIGH>; /* IRQ is active-low but pmc inverts the signal */
-			interrupt-controller;
-			#interrupt-cells = <3>;
-			status = "disabled";
-
-			vrs_rtc: rtc {
+	bpmp {
+		i2c {
+			vrs@3c {
+				compatible = "nvidia,vrs-pseq";
+				reg = <0x3c>;
+				interrupt-parent = <&intc>;
+				/* IRQ is active-low but pmc inverts the signal */
+				interrupts = <GIC_SPI TEGRA194_IRQ_PMIC_EXT_INTR IRQ_TYPE_LEVEL_HIGH>;
+				interrupt-controller;
+				#interrupt-cells = <3>;
 				status = "disabled";
-			};
 
-			vrs_wdt: watchdog {
-				status = "disabled";
+				vrs_rtc: rtc {
+					status = "disabled";
+				};
+
+				vrs_wdt: watchdog {
+					status = "disabled";
+				};
 			};
 		};
 	};
