video: tegra: host: moving T239 to private repo
This patch takes care of moving NvHost changes related to T239
to it's dedicated repo.

Jira HOSTX-2908
Jira HOSTX-2950

Change-Id: I0faa9b427c41c1f9970076cbf7602bbe5ed27a2a
Signed-off-by: Santosh B S <santoshb@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2554027
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Arto Merilainen <amerilainen@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/video/tegra/host/Kconfig
+++ b/drivers/video/tegra/host/Kconfig
@@ -7,6 +7,13 @@ config TEGRA_T23X_GRHOST
 	help
 	  Driver for the Tegra graphics host hardware.
 
+config TEGRA_T239_GRHOST
+	bool "Tegra 239 graphics host driver"
+	depends on TEGRA_GRHOST && ARCH_TEGRA_239_SOC
+	default y
+	help
+	  Driver for the Tegra graphics host hardware.
+
 config TEGRA_GRHOST_NVDLA
 	bool "Tegra NVDLA support"
 	depends on TEGRA_GRHOST && (ARCH_TEGRA_19x_SOC || ARCH_TEGRA_194_SOC)
