--- a/drivers/video/tegra/host/Makefile
+++ b/drivers/video/tegra/host/Makefile
@@ -6,6 +6,11 @@ ccflags-y += -Idrivers/video/tegra/host
 ccflags-y += -Idrivers/devfreq
 ccflags-y += -Wno-multichar
 
+ifeq ($(CONFIG_TEGRA_T239_GRHOST),y)
+	ccflags-y += -I$(srctree.nvidia-t239)/include
+	ccflags-y += -I$(srctree.nvidia-t239)/drivers/video/tegra/host
+endif
+
 ccflags-y += -Werror -Wno-vla
 
 nvhost-y += \
@@ -32,8 +37,10 @@ nvhost-y += \
 
 nvhost-$(CONFIG_TEGRA_T23X_GRHOST) += \
 	t23x/t23x.o \
-	t239/t239.o \
 	riscv/riscv.o
+
+nvhost-$(CONFIG_TEGRA_T239_GRHOST) += \
+	t239/t239.o
 
 nvhost-$(CONFIG_TEGRA_GRHOST_OFA) += ofa/ofa.o
 
