misc: Add PCIe client driver for DMA function
Add PCIe client driver for DMA function to support data integrity, perf
and stress tests.

Bug 200715843

Change-Id: Ie9aab6e56f7b5b365aa080930797a45434bb7c6d
Signed-off-by: Manikanta Maddireddy <mmaddireddy@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2554195
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Vidya Sagar <vidyas@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -87,6 +87,15 @@ config TEGRA_PCIE_EP_MEM
 	 Say Y if Tegra is working in PCIe-End Point mode and a client
 	 driver is required
 
+config TEGRA_PCIE_DMA_TEST
+	tristate "Client driver for Tegra PCIe DMA test end point function"
+	depends on PCI
+	help
+	 Say Y if client driver is required for Tegra PCIe-End Point mode
+	 enabled with DMA test function.
+
+	 If in doubt, say "N" to disable Tegra PCIe DMA test driver.
+
 if ARCH_TEGRA
 source "drivers/misc/nvs-dfsh/Kconfig"
 source "drivers/misc/nvs/Kconfig"
