--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -17,6 +17,7 @@ obj-$(CONFIG_TEGRA186_AHC) += tegra186-ahc/
 obj-$(CONFIG_EVENTLIB)		+= eventlib/
 obj-$(CONFIG_NVSCIC2C) += nvscic2c/
 obj-$(CONFIG_NVSCIIPC)		+= nvsciipc/
+obj-$(CONFIG_TEGRA_PCIE_DMA_TEST)	+= tegra-pcie-dma-test.o
 
 ifdef CONFIG_ARCH_TEGRA_19x_SOC
 
