--- a/cvb/tegra234-p3737-0000-a00.dtsi
+++ b/cvb/tegra234-p3737-0000-a00.dtsi
@@ -16,6 +16,7 @@
 #include "tegra234-p3737-audio.dtsi"
 #include "tegra234-p3737-fixed-regulator.dtsi"
 #include "tegra234-ethernet-3737-0000.dtsi"
+#include "tegra234-p3737-super-module-e2614.dtsi"
 
 / {
 	gpio-keys {
