--- a/cvb/tegra234-p3737-audio.dtsi
+++ b/cvb/tegra234-p3737-audio.dtsi
@@ -1,5 +1,5 @@
 /*
- * T194 p3701 audio common DTSI file.
+ * T234 p3737 audio DTSI file.
  *
  * Copyright (c) 2021, NVIDIA CORPORATION.  All rights reserved.
  *
@@ -15,6 +15,9 @@
 
 #include <audio/tegra-platforms-audio-dai-links.dtsi>
 #include <audio/tegra186-audio-dai-links.dtsi>
+#include <dt-bindings/gpio/tegra234-gpio.h>
+#include <dt-bindings/audio/tegra234-audio.h>
+#include <audio/tegra-platforms-audio-dmic3-5-switch.dtsi>
 
 / {
 	aconnect@2a41000 {
@@ -27,28 +30,99 @@
 		adsp@2993000 {
 			status = "okay";
 		};
+
+		ahub {
+			/* I2S4 in Short frame sync for BT SCO */
+			i2s@2901300 {
+				bclk-ratio = <4>;
+			};
+		};
 	};
 
 	hda@3510000 {
-		hda,card-name = "tegra-hda-xnx";
+		nvidia,model = "NVIDIA Jetson Concord HDA";
 		status = "okay";
+	};
+
+	i2c@31e0000 {
+		rt5658: rt5659.7-001a@1a {
+			compatible = "realtek,rt5658";
+			reg = <0x1a>;
+
+			/* refer include/sound/rt5659.h for the values to be used */
+			realtek,jd-src = <2>; /* RT5659_JD_HDA_HEADER */
+			realtek,dmic1-data-pin = <0>; /* RT5659_DMIC1_NULL */
+			realtek,dmic2-data-pin = <0>; /* RT5659_DMIC2_NULL */
+
+			/* Codec IRQ output */
+			interrupt-parent = <&tegra_main_gpio>;
+			interrupts = <TEGRA234_MAIN_GPIO(AC, 5) GPIO_ACTIVE_HIGH>;
+
+			clocks = <&bpmp TEGRA234_CLK_AUD_MCLK>;
+			clock-names = "mclk";
+
+			#sound-dai-cells = <1>;
+
+			sound-name-prefix = "CVB-RT";
+
+			status = "okay";
+
+		};
 	};
 
 	tegra_sound: sound {
 		status = "okay";
-		compatible = "nvidia,tegra-audio-t186ref-mobile-rt565x";
-		nvidia-audio-card,name = "jetson-xaviernx-ape";
+		compatible = "nvidia,tegra186-ape";
+		nvidia-audio-card,name = "NVIDIA Jetson Concord APE";
 		clocks = <&bpmp_clks TEGRA234_CLK_PLLA>,
 			 <&bpmp_clks TEGRA234_CLK_PLLA_OUT0>,
 			 <&bpmp_clks TEGRA234_CLK_AUD_MCLK>;
 		clock-names = "pll_a", "pll_a_out0", "extern1";
-		assigned-clocks = <&bpmp_clks TEGRA234_CLK_PLLA_OUT0>,
-				  <&bpmp_clks TEGRA234_CLK_AUD_MCLK>;
-		assigned-clock-parents = <&bpmp_clks TEGRA234_CLK_PLLA>,
-					 <&bpmp_clks TEGRA234_CLK_PLLA_OUT0>;
+		assigned-clocks = <&bpmp_clks TEGRA234_CLK_AUD_MCLK>;
+		assigned-clock-parents = <&bpmp_clks TEGRA234_CLK_PLLA_OUT0>;
+
+		nvidia-audio-card,widgets =
+			"Headphone",    "CVB-RT Headphone Jack",
+			"Microphone",   "CVB-RT Mic Jack",
+			"Speaker",      "CVB-RT Int Spk",
+			"Microphone",   "CVB-RT Int Mic";
+
+		nvidia-audio-card,routing =
+			"CVB-RT Headphone Jack",     "CVB-RT HPO L Playback",
+			"CVB-RT Headphone Jack",     "CVB-RT HPO R Playback",
+			"CVB-RT IN1P",               "CVB-RT Mic Jack",
+			"CVB-RT IN2P",               "CVB-RT Mic Jack",
+			"CVB-RT Int Spk",            "CVB-RT SPO Playback",
+			"CVB-RT DMIC L1",            "CVB-RT Int Mic",
+			"CVB-RT DMIC L2",            "CVB-RT Int Mic",
+			"CVB-RT DMIC R1",            "CVB-RT Int Mic",
+			"CVB-RT DMIC R2",            "CVB-RT Int Mic";
 
 		nvidia-audio-card,mclk-fs = <256>;
 	};
 };
 
-hdr40_snd_link_i2s: &i2s5_to_codec { };
+/*
+ * Default config for all I2S dai links are
+ * format = "i2s", bitclock-slave, frame-slave,
+ * bitclock-noninversion, frame-noninversion,
+ * Any change from default needs override on
+ * platform specific files.
+ */
+
+/* Override with Codec entries */
+&i2s1_to_codec {
+	link-name = "rt565x-playback";
+	codec {
+		sound-dai = <&rt5658 0>;
+		prefix = "CVB-RT";
+	};
+};
+
+hdr40_snd_link_i2s: &i2s2_to_codec { };
+
+/* Override with BT SCO entries */
+&i2s4_to_codec {
+	format = "dsp_a";
+	bitclock-inversion;
+};
