dts: t23x: add bpmp-fw carveout to reserved-memory
In backdoor boot, bpmp-fw carveout is fixed to 4MB at 0x84c00000.
Make that area reserved for FPGA and sim.

Bug 200721276

Change-Id: Iac36d1745f9687302f2ae30538a4415979c00ace
Signed-off-by: Stefan Kristiansson <stefank@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2554571
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -441,6 +441,10 @@
 				alignment = <0 0x400000>;
 				alloc-ranges = <0x0 0x80000000 0x0 0x70000000>;
 		};
+
+		bpmp-fw {
+                        reg = <0x0 0x84c00000 0x0 0x400000>;
+                };
         };
 
 	tegra_main_gpio: gpio@2200000 {
