--- a/kernel-dts/tegra234-soc/tegra234-soc-sim.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-sim.dtsi
@@ -33,6 +33,10 @@
 				alignment = <0 0x400000>;
 				alloc-ranges = <0x0 0x80000000 0x0 0x70000000>;
 		};
+
+		bpmp-fw {
+			reg = <0x0 0x84c00000 0x0 0x400000>;
+		};
 	};
 
 	tegra-carveouts {
