bct: scr: Update SCR for UARTB
UARTB access should only be alllowed to CCPLEX

Bug 200620416
Bug 3300374

Change-Id: Ib420b19c3d84d7299f0c4546f6e2e9f61eaaa751
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/common/+/2555175
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Dilan Lee <dilee@nvidia.com>
Reviewed-by: Amlan Kundu <akundu@nvidia.com>
Reviewed-by: Sandeep Trasi <strasi@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Prashant Parihar <pparihar@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
@@ -1,4 +1,3 @@
-
 #
 # t194_cbb.cfg
 #
@@ -13,7 +12,7 @@
 scr.major = 1;
 scr.minor = 0;
 
-# Chip version = 94;
+# Chip version = 95;
 # Platform version = 0;
 # Project version = 11;
 # SCR Section
@@ -2233,7 +2232,7 @@ scr.2211.4 = 0x39002626; # CBB_CENTRAL_NOC_TSA_NODE_16_BLF_CONTROL_REGISTER_0
 scr.2212.4 = 0x39002626; # CBB_CENTRAL_NOC_TSA_NODE_17_BLF_CONTROL_REGISTER_0
 scr.2213.4 = 0x39002626; # CBB_CENTRAL_NOC_TSA_NODE_18_BLF_CONTROL_REGISTER_0
 scr.2214.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_A_BLF_CONTROL_REGISTER_0
-scr.2215.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_B_BLF_CONTROL_REGISTER_0
+scr.2215.4 = 0x39000202; # CBB_CENTRAL_NOC_UART_B_BLF_CONTROL_REGISTER_0
 scr.2216.4 = 0x18008282; # CBB_CENTRAL_NOC_UART_E_BLF_CONTROL_REGISTER_0
 scr.2217.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_F_BLF_CONTROL_REGISTER_0
 scr.2218.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_H_BLF_CONTROL_REGISTER_0
