--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini.cfg
@@ -12,7 +12,7 @@
 scr.major = 1;
 scr.minor = 0;
 
-# Chip version = 94;
+# Chip version = 95;
 # SCR Section
 scr.0.6 = 0x3c001010; # APS_AST_SCR_AST_GBL_SEC_CONTROL_0
 scr.1.6 = 0x390003ff; # APS_AST_SCR_AST_HYP_SEC_CONTROL_0
@@ -2230,7 +2230,7 @@ scr.2211.4 = 0x39002626; # CBB_CENTRAL_NOC_TSA_NODE_16_BLF_CONTROL_REGISTER_0
 scr.2212.4 = 0x39002626; # CBB_CENTRAL_NOC_TSA_NODE_17_BLF_CONTROL_REGISTER_0
 scr.2213.4 = 0x39002626; # CBB_CENTRAL_NOC_TSA_NODE_18_BLF_CONTROL_REGISTER_0
 scr.2214.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_A_BLF_CONTROL_REGISTER_0
-scr.2215.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_B_BLF_CONTROL_REGISTER_0
+scr.2215.4 = 0x39000202; # CBB_CENTRAL_NOC_UART_B_BLF_CONTROL_REGISTER_0
 scr.2216.4 = 0x18008282; # CBB_CENTRAL_NOC_UART_E_BLF_CONTROL_REGISTER_0
 scr.2217.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_F_BLF_CONTROL_REGISTER_0
 scr.2218.4 = 0x1a000606; # CBB_CENTRAL_NOC_UART_H_BLF_CONTROL_REGISTER_0
