video: tegra: host: clean-up for TEGRA_T23X_GRHOST
Since linux-t23x repo is merged to linux-nvidia repo,
cleaning-up the code where CONFIG_TEGRA_T23X_GRHOST is used
to include the code from linux-t23x.

Jira HOSTX-2950

Change-Id: I1bb66db522cdacf3802ff428b96ceced02af659b
Signed-off-by: Santosh B S <santoshb@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2555749
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Sachin Nikam <snikam@nvidia.com>
Reviewed-by: Arto Merilainen <amerilainen@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/video/tegra/host/Makefile
+++ b/drivers/video/tegra/host/Makefile
@@ -31,27 +31,18 @@ nvhost-y += \
 	nvhost_syncpt_unit_interface.o \
 	host1x/host1x.o \
 	flcn/flcn.o \
+	riscv/riscv.o \
 	t210/t210.o \
 	t186/t186.o \
-	t194/t194.o
-
-nvhost-$(CONFIG_TEGRA_T23X_GRHOST) += \
-	t23x/t23x.o \
-	riscv/riscv.o
+	t194/t194.o \
+	t23x/t23x.o
 
 nvhost-$(CONFIG_TEGRA_T239_GRHOST) += \
 	t239/t239.o
 
 nvhost-$(CONFIG_TEGRA_GRHOST_OFA) += ofa/ofa.o
-
-nvhost-$(CONFIG_TEGRA_GRHOST_NVDEC) += nvdec/nvdec.o
-ifeq ($(CONFIG_TEGRA_T23X_GRHOST),y)
-nvhost-$(CONFIG_TEGRA_GRHOST_NVDEC) += nvdec/nvdec_t23x.o
-endif
-nvhost-$(CONFIG_TEGRA_GRHOST_TSEC) += tsec/tsec.o
-ifeq ($(CONFIG_TEGRA_T23X_GRHOST),y)
-nvhost-$(CONFIG_TEGRA_GRHOST_TSEC) += tsec/tsec_t23x.o
-endif
+nvhost-$(CONFIG_TEGRA_GRHOST_NVDEC) += nvdec/nvdec.o nvdec/nvdec_t23x.o
+nvhost-$(CONFIG_TEGRA_GRHOST_TSEC) += tsec/tsec.o tsec/tsec_t23x.o
 
 nvhost-$(CONFIG_TEGRA_GRHOST_LEGACY_PD) += nvhost_pd.o
 ifeq ($(CONFIG_SYNC),y)
@@ -63,9 +54,6 @@ endif
 nvhost-$(CONFIG_TEGRA_GRHOST_GOS) += nvhost_gos.o
 nvhost-$(CONFIG_TEGRA_GRHOST_SCALE) += scale_emc.o nvhost_scale.o
 nvhost-$(CONFIG_TEGRA_GRHOST_VHOST) += vhost/vhost.o vhost/vhost_client.o
-ifeq ($(CONFIG_TEGRA_T23X_GRHOST),y)
-nvhost-$(CONFIG_TEGRA_GRHOST_VHOST) += vhost/vhost_t23x.o
-endif
 
 obj-$(CONFIG_TEGRA_GRHOST) += nvhost.o
 
