sim: add atf and tos reserved-memory
nvmap sanity test can allocate memory from the
shared memory region used by ATF and TOS.
Hence, mark the region as reserved memory
for VDK and FPGA

Bug 200721276

Change-Id: I82471cd4d52f3d3ee0ac3ee8a3aa5dccc69a6608
Signed-off-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2555901
Tested-by: Ashish Mhetre <amhetre@nvidia.com>
Tested-by: Pritesh Raithatha <praithatha@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Ashish Mhetre <amhetre@nvidia.com>
Reviewed-by: Pritesh Raithatha <praithatha@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -442,6 +442,11 @@
 				alloc-ranges = <0x0 0x80000000 0x0 0x70000000>;
 		};
 
+		/* The sec-mon memory in bootwrapper */
+		sec-mon {
+			reg = <0x0 0x84080000 0x0 0x400000>;
+		};
+
 		bpmp-fw {
                         reg = <0x0 0x84c00000 0x0 0x400000>;
                 };
