--- a/drivers/pci/controller/dwc/Kconfig
+++ b/drivers/pci/controller/dwc/Kconfig
@@ -281,6 +281,13 @@ config PCIE_TEGRA194_EP
 	  in order to enable device-specific features PCIE_TEGRA194_EP must be
 	  selected. This uses the DesignWare core.
 
+config PCIE_RP_DMA_TEST
+	bool "NVIDIA Tegra194 (and later) PCIe RP DMA test interface"
+	help
+	  Say Y here if you want to enable PCIe RP DMA test interface.
+
+	  If in doubt, say "N" to disable Tegra PCIe RP DMA test driver.
+
 config PCIE_UNIPHIER
 	bool "Socionext UniPhier PCIe host controllers"
 	depends on ARCH_UNIPHIER || COMPILE_TEST
