--- a/cvb/tegra234-p3737-fixed-regulator.dtsi
+++ b/cvb/tegra234-p3737-fixed-regulator.dtsi
@@ -12,6 +12,7 @@
  * more details.
  */
 
+#include <dt-bindings/gpio/tegra234-gpio.h>
 / {
 	fixed-regulators {
 		hdr40_vdd_5v0: battery_reg: regulator@0 {
@@ -63,7 +64,9 @@
 			regulator-name = "vdd-3v3-pcie";
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
-/* TODO			gpio = <GPIO23>; */
+			vin-supply = <&p3737_vdd_3v3_sys>;
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(Z, 2) 0>;
+			enable-active-high;
 		};
 		p3737_avdd_cam_2v8: regulator@106 {
 			compatible = "regulator-fixed";
@@ -71,7 +74,9 @@
 			regulator-name = "avdd-cam-2v8";
 			regulator-min-microvolt = <2800000>;
 			regulator-max-microvolt = <2800000>;
-/* TODO			gpio = <GPIO36>; */
+			vin-supply = <&p3737_vdd_3v3_sys>;
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(Q, 1) 0>;
+			enable-active-high;
 		};
 		p3737_vdd_av1v1_hub: regulator@107 {
 			compatible = "regulator-fixed";
@@ -104,7 +109,8 @@
 			regulator-min-microvolt = <100000>;
 			regulator-max-microvolt = <100000>;
 			vin-supply = <&p3737_vdd_3v3_sys>;
-/* TODO			gpio = <GPIO20>; */
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(A, 3) 0>;
+			enable-active-high;
 		};
 		p3737_vdd_3v3_sd: regulator@111 {
 			compatible = "regulator-fixed";
@@ -113,7 +119,8 @@
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			vin-supply = <&p3737_vdd_3v3_sys>;
-/* TODO			gpio = <GPIO21>; */
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(A, 0) 0>;
+			enable-active-high;
 		};
 		p3737_vdd_usbc1_vbus: regulator@112 {
 			compatible = "regulator-fixed";
