--- a/t234-common-cvb/tegra234-p3711-pcie.dtsi
+++ b/t234-common-cvb/tegra234-p3711-pcie.dtsi
@@ -12,4 +12,35 @@
  */
 
 / {
+	/* C1 - M.2 Key-E */
+	pcie@14100000 {
+		status = "okay";
+
+		phys = <&hsio_p2u_3>;
+		phy-names = "p2u-0";
+	};
+
+	/* C4 - M.2 Key-M */
+	pcie@14160000 {
+		status = "disabled";
+
+		phys = <&hsio_p2u_4>, <&hsio_p2u_5>, <&hsio_p2u_6>,
+		       <&hsio_p2u_7>;
+		phy-names = "p2u-0", "p2u-1", "p2u-2", "p2u-3";
+	};
+
+	/* C5 - CEM slot (Testing purpose)
+	 *
+	 * When the following is enabled, make sure that P3713 board is
+	 * removed and all the PCIe nodes of P3713 are set to 'disabled'
+	 */
+	pcie@141a0000 {
+		status = "disabled";
+
+		phys = <&nvhs_p2u_0>, <&nvhs_p2u_1>, <&nvhs_p2u_2>,
+		       <&nvhs_p2u_3>, <&nvhs_p2u_4>, <&nvhs_p2u_5>,
+		       <&nvhs_p2u_6>, <&nvhs_p2u_7>;
+		phy-names = "p2u-0", "p2u-1", "p2u-2", "p2u-3",
+			    "p2u-4", "p2u-5", "p2u-6", "p2u-7";
+	};
 };
