t23x: p3701-common: Add support for eMMC
Add required dt properties to support eMMC on
P3701 CVM

Bug 200701822

Change-Id: Ie800bf7ac051e464d4f881252773fdc8b5a248fa
Signed-off-by: Aniruddha Tvs Rao <anrao@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/common-dts/+/2558269
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Sachin Nikam <snikam@nvidia.com>
Reviewed-by: Jeetesh Burman <jburman@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/t234-common-cvm/tegra234-cvm-p3701.dtsi
+++ b/t234-common-cvm/tegra234-cvm-p3701.dtsi
@@ -180,6 +180,14 @@
 		};
 	};
 
+	sdhci@3460000 {
+		uhs-mask = <0x0>;
+		no-sdio;
+		no-sd;
+		supports-cqe;
+		status = "okay";
+	};
+
 	pmc@c360000 {
 #if TEGRA_PMC_VERSION >= DT_VERSION_2
 		nvidia,invert-interrupt;
